--- a/client/package.json
+++ b/client/package.json
@@ -1,52 +1,45 @@
 {
   "name": "client",
-  "version": "0.0.0",
-  "description": "client",
-  "main": "index.js",
-  "private": true,
-  "license": "UNLICENSED",
+  "version": "0.0.1",
+  "description": "test",
+  "productName": "client",
+  "cordovaId": "org.cordova.quasar.app",
+  "capacitorId": "",
   "author": "Emile Robillard <xiaotong-robillard@hotmail.com>",
+  "private": true,
   "scripts": {
-    "lint": "eslint --fix --ext .js,.vue src scripts",
-    "lint:nofix": "eslint --ext .js,.vue src scripts",
+    "lint": "eslint --ext .js,.vue src",
     "test": "echo \"No test specified\" && exit 0",
     "build": "quasar build",
-    "dev": "quasar dev",
-    "pkg:deb": "npm run build && node scripts/make-deb.js"
+    "dev": "quasar dev"
   },
   "dependencies": {
-    "@quasar/extras": "^1.3.2",
-    "axios": "^0.19.0",
-    "bluebird": "^3.7.2",
-    "es6-promise": "^4.2.8",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "numeric": "^1.2.6",
-    "quasar": "^1.1.6",
-    "vue": "^2.6.11",
-    "vue-analytics": "^5.20.1",
-    "vue-i18n": "^8.8.1",
-    "vue-scroll-behavior": "^0.2.0",
-    "vue-scrollto": "^2.15.0",
-    "vue2-leaflet": "^2.2.1",
-    "vuelidate": "^0.7.4",
-    "vuex": "^3.1.2",
-    "xlsx-populate": "^1.14.0"
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.18.1",
+    "quasar": "^1.0.0",
+    "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
-    "@quasar/app": "1.1.3",
-    "@vue/eslint-config-airbnb": "^4.0.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3"
+    "@quasar/app": "^1.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.1.2"
   },
   "engines": {
-    "node": ">= 12.13.0",
-    "npm": ">= 6.13.0",
-    "yarn": ">= 1.16.0"
+    "node": ">= 10.18.1",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
+  },
+  "browserslist": [
+    "last 1 version, not dead, ie >= 11"
+  ],
+  "resolutions": {
+    "@babel/parser": "^7.7.5"
   }
 }
