feat: Add mtg dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bluebird": "^3.7.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
+    "mtgsdk": "^0.4.3",
     "numeric": "^1.2.6",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0",
